fix: correct color of the scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,7 +42,7 @@ html::-webkit-scrollbar-thumb,
 
 .scrollbar {
   scrollbar-width: thin;
-  scrollbar-color: var(--dark-color-transparent) transparent;
+  scrollbar-color: var(--weak-color) transparent;
 }
 
 body {
